--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <p>Join 60,000+ product managers receiving monthly updates on:</p>
 
       <ul>
-        <li> <img src="./assets/images/icon-list.svg" alt="icon lisst"> Product discovery and building what matters</li>
-        <li> <img src="./assets/images/icon-list.svg" alt="icon lisst"> Measuring to ensure updates are a success</li>
+        <li> <img class="top"src="./assets/images/icon-list.svg" alt="icon lisst"> Product discovery and building what matters</li>
+        <li> <img class="top"src="./assets/images/icon-list.svg" alt="icon lisst"> Measuring to ensure updates are a success</li>
         <li> <img src="./assets/images/icon-list.svg" alt="icon lisst"> And much more!</li>
       </ul>
       
