--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
    </div>
    <div class="right"></div>
    </div>
+    <div class="sucess sim">
+      <!-- Success message start -->
+      <div class="img">
+
+      </div>
+
+      <h1>Thanks for subscribing!</h1>
+
+      <p> A confirmation email has been sent to <span>ash@loremcompany.com.</span>
+        Please open it and click the button inside to confirm your subscription.
+      </p>
+
+      <button id="diss">Dismiss message</button>
+
+      <!-- Success message end -->
+    </div>
  </div>
  </main>
   
